@@ -4,6 +4,9 @@ Broker:
 - mosquitto_connect_bind_async() and mosquitto_connect_bind_v5() should not
   reset the bind address option if called with bind_address == NULL.
 
+Build:
+- Fix man pages not being built when using CMake. Closes #1969.
+
 
 2.0.3 - 2020-12-17
 ==================
